Some info updates and visual revise

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 * {
-  font-family: Inconsolata, Menlo, Monaco, "Bitstream Vera Sans Mono", monospace;
+  font-family: 'Roboto Condensed', sans-serif;
   font-size: 18px;
   font-weight: 300;
   /* padding: 2em 4em; */
@@ -13,8 +13,37 @@
   text-align: left;
 }
 
+.underline {
+  border-bottom: 5px dashed lightskyblue;
+  max-width: fit-content;
+}
+
+.thin-underline {
+  border-bottom: 3px dashed lightskyblue;
+}
+
+.experience-block {
+  padding-left: 30px;
+}
+
+li {
+  list-style: none;
+  margin: 10px 0;
+}
+
+li::before {
+  content: '';
+  display: inline-block;
+  height: 25px;
+  width: 20px;
+  background-image: url('/assets/icons.png');
+  background-repeat: no-repeat;
+  background-position: -1px -25px;
+  background-size: 65px 105px;
+}
+
 .bold {
-  font-weight: 600;
+  font-weight: 1000;
 }
 
 .body {
@@ -29,7 +58,11 @@
   font-size: 24px;
 }
 
-.title {
+.main-title {
+  font-size: 40px;
+}
+
+.sub-title {
   margin-bottom: 1rem;
 }
 
@@ -43,4 +76,18 @@
 
 .link {
   margin: 0 5px;
+  text-decoration: none;
+  border-bottom: 5px solid lightskyblue;
+}
+
+.decoration-container {
+  display: block;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  z-index: -10;
+}
+
+.decoration-container img {
+  width: 250px;
 }
